# parser_habr

./: .env  .env.debug  .env.docker.debug  README.md  docker-compose.development.yml  docker-compose.yml  links_params.json  pyproject.toml  selenium_test.py  tests_search.sql
dockerfile/: Dockerfile.Dev  Dockerfile.Prod
secrets/: debug_db_password  prod_db_password
src/: config.py  db_metadata.py  init_db.py  limiter.py  log.py  main.py
