[tool.poetry]
name = "parser-habr"
version = "0.1.0"
description = ""
authors = ["Новиков Илья <nov.ilucha@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.19.0"
aiohttp = "^3.9.3"
beautifulsoup4 = "^4.12.3"
SQLAlchemy = "^2.0.29"
lxml = "^5.2.1"
tqdm = "^4.66.2"
pydantic-settings = "^2.2.1"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
